<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/timer"

        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="26dp"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"

        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:indeterminate="false"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="left"
        android:padding="20dp"
        android:textColor="@color/colorText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/QuestionText"

        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="5dp"

        android:gravity="center"
        android:padding="20dp"
        android:text="@string/Initial"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/studentNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="294dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/StudentNumber"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"

        android:layout_height="255dp"

        android:layout_below="@id/QuestionText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="-6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/option1"

            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorText"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/option2"

            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorText"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/option3"

            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorText"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/option4"

            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorText"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:visibility="invisible"/>

    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="150dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="406dp"
        android:text="@string/Start_Button" />

    <Button
        android:id="@+id/close"
        android:layout_width="150dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:layout_marginTop="408dp"
        android:text="@string/Close_Button" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/QuestionText"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="0dp"
        android:text="@string/Back_Button"
        android:visibility="invisible" />

</RelativeLayout>